[package]
name = "horseACT"
version = "1.1.2"
edition = "2021"

[lib]
name = "horseACT"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["clock"] }
ureq = "2"
flate2 = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
